fix(recommendation): add hasRecommendation flag to control message visibility

--- a/src/app/features/recommendation/styles/recommendation.css
+++ b/src/app/features/recommendation/styles/recommendation.css
@@ -5,19 +5,19 @@
     width: 470px;
     max-width: var(--timer-responsive-size);
     margin: 3rem var(--button-margin-center) 0;
-    animation: fadeInUp 0.5s ease-in;
     padding: 2rem;
 }
 
 .recommendation-message {
     font-size: 1.3rem;
-    font-style: italic;
     font-weight: 300;
     color: #030712;
     text-align: var(--timer-alignment);
     line-height: 1.75;
     letter-spacing: 0.025em;
+    animation: fadeInUp 0.5s ease-in;
 }
+
 
 @keyframes fadeInUp {
     from {
